added support for different java versions, sdk, maven and gradle